# CLionProjects

Exercicio 1 Estrutura de dados/: CMakeLists.txt  main.c
Exercicio 1 Listas Ordenadas Estrutura de Dados/: CMakeLists.txt  bubbleSort.c  insertionSort.c  main.c  selectionSort.c
Exercicio 1 Recursividade, Estrutura de Dados/: CMakeLists.txt  main.c
Exercicio 2 Estruturas de dados/: CMakeLists.txt  main.c
Exercicio 2 Recursividade, Estrutura de Dados/: CMakeLists.txt  main.c
Exercicio 3 Estrutura de dados/: CMakeLists.txt  main.c
Exercicio 3 Recursividade, Estrutura de Dados/: CMakeLists.txt  main.c
Exercicio 4 Estrutura de dados/: main.c
Exercicio 4 Recursividade, Estruturas de Dados/: CMakeLists.txt  main.c
Exercicio 5 Recursividade, Estrutura de Dados/: CMakeLists.txt  main.c
Exercicio 6 Recursividade, Estrutura de Dados/: CMakeLists.txt  main.c
Exercicio 7 Recursividade, Estrutura de Dados/: CMakeLists.txt  main.c
Exercicio_2_Lista_Ordenadas_Estrutura_de_Dados/: CMakeLists.txt  main.c
