cmake_minimum_required(VERSION 3.27)
project(Exercicio_1_Recursividade__Estrutura_de_Dados)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exercicio_1_Recursividade__Estrutura_de_Dados
        .idea/.gitignore
        ".idea/Exercicio 1 Recursividade, Estrutura de Dados.iml"
        .idea/modules.xml
        main.c)
